--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,31 +1,42 @@
-# Files in the config/locales directory are used for internationalization and
-# are automatically loaded by Rails. If you want to use locales other than
-# English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t "hello"
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t("hello") %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# To learn more about the API, please read the Rails Internationalization guide
-# at https://guides.rubyonrails.org/i18n.html.
-#
-# Be aware that YAML interprets the following case-insensitive strings as
-# booleans: `true`, `false`, `on`, `off`, `yes`, `no`. Therefore, these strings
-# must be quoted to be interpreted as strings. For example:
-#
-#     en:
-#       "yes": yup
-#       enabled: "ON"
-
 en:
-  hello: "Hello world"
+  activerecord:
+    models:
+      character: "Character"
+    attributes:
+      character:
+        player: "Player"
+        name: "Name"
+        role: "Role"
+        origins: "Cultural origins"
+        personality: "Personality"
+      character/role:
+        exec: "Exec"
+        fixer: "Fixer"
+        lawman: "Lawman"
+        media: "Media"
+        medtech: "Medtech"
+        netrunner: "Netrunner"
+        nomad: "Nomad"
+        rockerboy: "Rockerboy"
+        solo: "Solo"
+        tech: "Tech"
+      character/origins:
+        north_american: "North American"
+        south/central_american: "South/Central American"
+        western_europe: "Western Europe"
+        eastern_europe: "Eastern Europe"
+        middle_eastern/north_african: "Middle Eastern/North African"
+        sub-saharan_african: "Sub-Saharan African"
+        south_asian: "South Asian"
+        south-east_asian: "South-East Asian"
+        east_asian: "East Asian"
+        oceania/pacific_islander: "Oceania/Pacific Islander"
+  characters:
+    form:
+      setup: "Setup"
+      personals: "Personals"
+      background": "Background"
+      wrap_up: "Wrap-up"
+      role_lifepath: "Role lifepath"
+      roll: "Roll"
+      random: "Random"
