Added the rest of the "personals"
Fun stuff : because the clothing comes with details on the available
styles, the JS logic to copy the selected value had to be changed,
so that the details are ignored. And the result isn't pretty. (But
it's temporary.)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -42,6 +42,82 @@ en:
         sneaky_and_deceptive: "Sneaky and deceptive"
         intellectual_and_detached: "Intellectual and detached"
         friendly_and_outgoing: "Friendly and outgoing"
+      character/clothing:
+        generic_chic: "Generic Chic"
+        urban_flash: "Urban Flash"
+        high_fashion: "High Fashion"
+        bag_lady_chic: "Bag Lady Chic"
+        nomad_leathers: "Nomad Leathers"
+        gang_colors: "Gang Colors"
+        businesswear: "Businesswear"
+        leisurewear: "Leisurewear"
+        bohemian: "Bohemian"
+        asia_pop: "Asia Pop"
+      character/hairstyle:
+        mohawk: "Mohawk"
+        long_and_ratty: "Long and ratty"
+        short_and_spiked: "Short and spiked"
+        wild_and_all_over: "Wild and all over"
+        bald: "Bald"
+        striped: "Striped"
+        wild_colors: "Wild colors"
+        neat_and_short: "Neat and short"
+        short_and-curly: "Short and curly"
+        long_and_straight: "Long and straight"
+      character/affectation:
+        tattoos: "Tattoos"
+        mirrorshades: "Mirrorshades"
+        ritual_scars: "Ritual scars"
+        spiked_gloves: "Spiked gloves"
+        nose_rings: "Nose rings"
+        tongue_or_other_piercings: "Tongue or other piercings"
+        strange_fingernail_implants: "Strange fingernail implants"
+        spiked_boots_or_heels: "Spiked boots or heels"
+        fingerless_gloves: "Fingerless gloves"
+        strange_contacts: "Strange contacts"
+      character/most_valued_thing:
+        money: "Money"
+        honor: "Honor"
+        your_word: "Your word"
+        honesty: "Honesty"
+        knowledge: "Knowledge"
+        vengeance: "Vengeance"
+        love: "Love"
+        power: "Power"
+        family: "Family"
+        friendship: "Friendship"
+      character/opinion_on_people:
+        neutral: "I stay neutral."
+        like: "I like almost everyone."
+        hate: "I hate almost everyone."
+        tools: "People are tools. Use them for your own goals then discard them."
+        valuable_individuals: "Every person is a valuable individual."
+        obstacles: "People are obstacles to be destroyed if they cross me."
+        untrustworthy: "People are untrustworthy. Don't depend on anyone."
+        wipe_em_all_out: "Wipe ‘em all out and let the cockroaches take over."
+        wonderful: "People are wonderful!"
+      character/most_valued_person:
+        parent: "A parent"
+        sibling: "A brother or sister"
+        lover: "A lover"
+        friend: "A friend"
+        oneself: "Yourself"
+        pet: "A pet"
+        mentor: "A teacher or mentor"
+        public_figure: "A public figure"
+        personal_hero: "A personal hero"
+        no_one: "No one"
+      character/most_valued_possession:
+        weapon: "A weapon"
+        tool: "A tool"
+        piece_of_clothing: "A piece of clothing"
+        photograph: "A photograph"
+        book: "A book or diary"
+        recording: "A recording"
+        musical_instrument: "A musical instrument"
+        piece_of_jewelry: "A piece of jewelry"
+        toy: "A toy"
+        letter: "A letter"
   characters:
     form:
       setup: "Setup"
@@ -52,3 +128,14 @@ en:
       roll: "Roll"
       random: "Random"
       next: "Next"
+      clothings:
+        generic_chic: "(Standard, Colorful, Modular)"
+        urban_flash: "(Flashy, Technological, Streetwear)"
+        high_fashion: "(Exclusive, Designer, Couture)"
+        bag_lady_chic: "(Homeless, Ragged, Vagrant)"
+        nomad_leathers: "(Western, Rugged, Tribal)"
+        gang_colors: "(Dangerous, Violent, Rebellious)"
+        businesswear: "(Leadership, Presence, Authority)"
+        leisurewear: "(Comfort, Agility, Athleticism)"
+        bohemian: "(Folksy, Retro, Free-spirited)"
+        asia_pop: "(Bright, Costume-like, Youthful)"
