New lifepath elements
They reveal new features or details to implement:

- Very long entries; and auto-sizing textarea would be nicer than a text
  input
- For some attributes, the "official" name, the name on the form, and the
  title of the options table could differ. (E.g. "the thing you value the most" /
  "most valued thing" / "Valuable things").
- Taking the text from the table as is (or by truncating it) doesn't work
  well all the time. (E.g.: "Your family was…" / "My family was…") This is
  hinted by the rewording of the texts to choose their i18n key.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -9,6 +9,16 @@ en:
         role: "Role"
         origins: "Cultural origins"
         personality: "Personality"
+        clothing: "Clothing style"
+        hairstyle: "Hairstyle"
+        affectation: "Usual affectation"
+        opinion_on_people: "Feelings towards people"
+        most_valued_thing: "Most valued thing"
+        most_valued_person: "Most valued person"
+        most_valued_possession: "Most valued possession"
+        original_background: "Original background"
+        childhood_environment: "Childhood environment"
+        family_crisis: "Family crisis"
       character/role:
         exec: "Exec"
         fixer: "Fixer"
@@ -129,6 +139,28 @@ en:
         megastructure_warren_rats: "Megastructure Warren Rats"
         reclaimers: "Reclaimers"
         edgerunners: "Edgerunners"
+      character/childhood_environment:
+        ran_on_the_street: "Ran on The Street, with no adult supervision."
+        safe_corp_zone: "Spent in a safe Corp Zone walled off from the rest of the City."
+        nomad_pack: "In a Nomad pack moving from place to place."
+        nomad_pack_with_roots_in_transport: "In a Nomad pack with roots in transport (ships, planes, caravans)."
+        decaying_neighborhood: "In a decaying, once upscale neighborhood, now holding off the boosters to survive."
+        the_combat_zone: "In the heart of the Combat Zone, living in a wrecked building or other squat."
+        megastructure: "In a huge “megastructure” building controlled by a Corp or the City."
+        city_taken_over_by_reclaimers: "In the ruins of a deserted town or city taken over by Reclaimers."
+        drift_nation: "In a Drift Nation (a floating offshore city) that is a meeting place for all kinds of people."
+        corporate_starscraper: "In a Corporate luxury “starscraper”, high above the rest of the teeming rabble."
+      character/family_crisis:
+        lost_everything_through_betrayal: "Your family lost everything through betrayal."
+        lost_everything_through_bad_management: "Your family lost everything through bad management."
+        exiled: "Your family was exiled or otherwise driven from their original home/nation/Corporation."
+        imprisoned: "Your family is imprisoned, and you alone escaped."
+        vanished: "Your family vanished. You are the only remaining member."
+        killed: "Your family was killed, and you were the only survivor."
+        involved_in_a_conspiracy: "Your family is involved in a long-term conspiracy, organization, or association, such as a crime family or revolutionary group."
+        scattered_due_to_misfortune.: "Your family was scattered to the winds due to misfortune."
+        cursed_with_a_hereditary_feud: "Your family is cursed with a hereditary feud that has lasted for generations."
+        inheritor_of_a_family_debt: "You are the inheritor of a family debt; you must honor this debt before moving on with your life."
   characters:
     form:
       setup: "Setup"
