--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -174,6 +174,39 @@ en:
         old_childhood_friend: "An old childhood friend."
         someone_from_the_street: "Someone you know from The Street."
         someone_with_a_common_interest: "Someone with a common interest or goal."
+      enemy/connection:
+        ex_friend: "Ex-friend"
+        ex_lover: "Ex-lover"
+        estranged_relative: "Estranged relative"
+        childhood_enemy: "Childhood enemy"
+        person_working_for_you: "Person working for you"
+        person_you_work_for: "Person you work for"
+        partner_or_coworker: "Partner or coworker"
+        corporate_exec: "Corporate exec"
+        government_official: "Government official"
+        boosterganger: "Boosterganger"
+      enemy/cause:
+        loss_face_or_status: "Caused the other to lose face or status."
+        loss_of_relative: "Caused the loss of lover, friend, or relative."
+        major_humiliation: "Caused a major public humiliation."
+        accused_of_personal_flaw: "Accused the other of cowardice or some other major personal flaw."
+        betrayed_the_other: "Deserted or betrayed the other."
+        turned_down_the_other: "Turned down the other's offer of a job or romantic involvement."
+        simple_enmity: "You just don't like each other."
+        former_romantic_rival: "One of you was a romantic rival."
+        former_business_rival: "One of you was a business rival."
+        setup: "One of you set the other up for a crime they didn't commit."
+      enemy/means_of_retaliation:
+        wont_go_out_of_their_way: "Just themselves and even they won't go out of their way."
+        themselves: "Just themselves."
+        themselves_and_a_friend: "Just themselves and a close friend."
+        themselves_and_few_friends: "Themselves and a few (1d6/2) friends."
+        themselves_and_many_friends: "Themselves and a few (1d10/2) friends."
+        entire_gang: "An entire gang (at least 1d10 + 5 people)."
+        local_cops: "The local cops or other Lawmen."
+        small_corporation: "A powerful gang lord or small Corporation."
+        powerful_corporation: "A powerful Corporation."
+        entire_city: "An entire city or government or agency."
   characters:
     form:
       setup: "Setup"
