i18n for friends & enemies

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,70 @@
 en:
+  activemodel:
+    attributes:
+      enemy:
+        name: "Name"
+        connection: "Connection"
+        cause: "Cause"
+        wronged_party: "Wronged party"
+        means_of_retaliation: "Means of retaliation"
+        intensity: "Intensity"
+      enemy/connection:
+        ex_friend: "Ex-friend"
+        ex_lover: "Ex-lover"
+        estranged_relative: "Estranged relative"
+        childhood_enemy: "Childhood enemy"
+        person_working_for_you: "Person working for you"
+        person_you_work_for: "Person you work for"
+        partner_or_coworker: "Partner or coworker"
+        corporate_exec: "Corporate exec"
+        government_official: "Government official"
+        boosterganger: "Boosterganger"
+      enemy/cause:
+        loss_face_or_status: "Caused the other to lose face or status."
+        loss_of_relative: "Caused the loss of lover, friend, or relative."
+        major_humiliation: "Caused a major public humiliation."
+        accused_of_personal_flaw: "Accused the other of cowardice or some other major personal flaw."
+        betrayed_the_other: "Deserted or betrayed the other."
+        turned_down_the_other: "Turned down the other's offer of a job or romantic involvement."
+        simple_enmity: "You just don't like each other."
+        former_romantic_rival: "One of you was a romantic rival."
+        former_business_rival: "One of you was a business rival."
+        setup: "One of you set the other up for a crime they didn't commit."
+      enemy/means_of_retaliation:
+        wont_go_out_of_their_way: "Just themselves and even they won't go out of their way."
+        themselves: "Just themselves."
+        single_friend: "Just themselves and a close friend."
+        few_friends: "Themselves and a few (1d6/2) friends."
+        many_friends: "Themselves and a few (1d10/2) friends."
+        entire_gang: "An entire gang (at least 1d10 + 5 people)."
+        local_cops: "The local cops or other Lawmen."
+        small_corporation: "A powerful gang lord or small Corporation."
+        powerful_corporation: "A powerful Corporation."
+        entire_city: "An entire city or government or agency."
+      enemy/intensity:
+        avoid: "Avoid the scum."
+        murderous_rage: "Go into a murderous rage and try to physically rip their face off."
+        backstab: "Backstab them indirectly."
+        verbal_attack: "Verbally attack them."
+        setup: "Set them up for a crime or other transgression they didn't commit."
+        murder: "Set out to murder or maim them."
+      enemy/wronged_party:
+        character: "You"
+        enemy: "Them"
+      friend:
+        name: "Name"
+        connection: "Connection"
+      friend/connection:
+        like_an_older_sibling: "Like an older sibling to you."
+        teacher_or_mentor: "A teacher or mentor."
+        former_lover: "A former lover."
+        like_a_parent: "Like a parent to you."
+        like_a_younger_sibling: "Like a younger sibling to you."
+        partner_or_coworker: "A partner or coworker."
+        old_enemy: "An old enemy."
+        old_childhood_friend: "An old childhood friend."
+        someone_from_the_street: "Someone you know from The Street."
+        someone_with_a_common_interest: "Someone with a common interest or goal."
   activerecord:
     models:
       character: "Character"
@@ -163,50 +229,16 @@ en:
         scattered_due_to_misfortune.: "Your family was scattered to the winds due to misfortune."
         cursed_with_a_hereditary_feud: "Your family is cursed with a hereditary feud that has lasted for generations."
         inheritor_of_a_family_debt: "You are the inheritor of a family debt; you must honor this debt before moving on with your life."
-      character/friend_relationship:
-        like_an_older_sibling: "Like an older sibling to you."
-        teacher_or_mentor: "A teacher or mentor."
-        former_lover: "A former lover."
-        like_a_parent: "Like a parent to you."
-        like_a_younger_sibling: "Like a younger sibling to you."
-        partner_or_coworker: "A partner or coworker."
-        old_enemy: "An old enemy."
-        old_childhood_friend: "An old childhood friend."
-        someone_from_the_street: "Someone you know from The Street."
-        someone_with_a_common_interest: "Someone with a common interest or goal."
-      enemy/connection:
-        ex_friend: "Ex-friend"
-        ex_lover: "Ex-lover"
-        estranged_relative: "Estranged relative"
-        childhood_enemy: "Childhood enemy"
-        person_working_for_you: "Person working for you"
-        person_you_work_for: "Person you work for"
-        partner_or_coworker: "Partner or coworker"
-        corporate_exec: "Corporate exec"
-        government_official: "Government official"
-        boosterganger: "Boosterganger"
-      enemy/cause:
-        loss_face_or_status: "Caused the other to lose face or status."
-        loss_of_relative: "Caused the loss of lover, friend, or relative."
-        major_humiliation: "Caused a major public humiliation."
-        accused_of_personal_flaw: "Accused the other of cowardice or some other major personal flaw."
-        betrayed_the_other: "Deserted or betrayed the other."
-        turned_down_the_other: "Turned down the other's offer of a job or romantic involvement."
-        simple_enmity: "You just don't like each other."
-        former_romantic_rival: "One of you was a romantic rival."
-        former_business_rival: "One of you was a business rival."
-        setup: "One of you set the other up for a crime they didn't commit."
-      enemy/means_of_retaliation:
-        wont_go_out_of_their_way: "Just themselves and even they won't go out of their way."
-        themselves: "Just themselves."
-        themselves_and_a_friend: "Just themselves and a close friend."
-        themselves_and_few_friends: "Themselves and a few (1d6/2) friends."
-        themselves_and_many_friends: "Themselves and a few (1d10/2) friends."
-        entire_gang: "An entire gang (at least 1d10 + 5 people)."
-        local_cops: "The local cops or other Lawmen."
-        small_corporation: "A powerful gang lord or small Corporation."
-        powerful_corporation: "A powerful Corporation."
-        entire_city: "An entire city or government or agency."
+      love_affair/ending:
+        accident: "Your lover died in an accident."
+        vanished: "Your lover mysteriously vanished."
+        didnt_work_out: "It just didn't work out."
+        goal_or_vendetta: "A personal goal or vendetta came between you and your lover."
+        kidnapped: "Your lover was kidnapped."
+        insane_or_cyberpsycho: "Your lover went insane or cyberpsycho."
+        suicide: "Your lover committed suicide."
+        rival: "A rival cut you out of the action."
+        imprisoned_or_exiled: "Your lover is imprisoned or exiled."
   characters:
     form:
       setup: "Setup"
@@ -226,6 +258,12 @@ en:
         zero: "Enemies"
         one: "Enemies (1)"
         other: "Enemies (%{count})"
+      friend_connection: "Friend's relationship to you"
+      enemy_connection: "Enemy"
+      enemy_cause: "What caused it?"
+      enemy_means_of_retaliation: "What can they throw at you?"
+      enemy_intensity: "What are you/they gonna do about it?"
+      love_affair_ending: "What happened?"
       clothings:
         generic_chic: "(Standard, Colorful, Modular)"
         urban_flash: "(Flashy, Technological, Streetwear)"
