--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -270,6 +270,61 @@ en:
         cause: "What caused it?"
         means_of_retaliation: "What can they throw at you?"
         intensity: "What are you/they gonna do about it?"
+      descriptions:
+        clothing:
+          generic_chic: "Standard, Colorful, Modular."
+          urban_flash: "Flashy, Technological, Streetwear."
+          high_fashion: "Exclusive, Designer, Couture."
+          bag_lady_chic: "Homeless, Ragged, Vagrant."
+          nomad_leathers: "Western, Rugged, Tribal."
+          gang_colors: "Dangerous, Violent, Rebellious."
+          businesswear: "Leadership, Presence, Authority."
+          leisurewear: "Comfort, Agility, Athleticism."
+          bohemian: "Folksy, Retro, Free-spirited."
+          asia_pop: "Bright, Costume-like, Youthful."
+        original_background:
+          corporate_execs: >-
+            Wealthy, powerful, with servants, luxury homes, and the best of everything.
+            Private security made sure you were always safe. 
+            You definitely went to a big-name private school.
+          corporate_managers: >-
+            Well to do, with large homes, safe neighborhoods, nice cars, etc. Sometimes your 
+            parent(s) would hire servants, although this was rare. You had a mix of private 
+            and corporate education.
+          corporate_technicians: >-
+            Middle-middle class, with comfortable conapts or Beaverville suburban homes,
+            minivans and corporate-run technical schools. Kind of like living 1950s America 
+            crossed with 1984.
+          nomad_pack: >-
+            You had a mix of rugged trailers, vehicles, and huge road kombis for your home.
+            You learned to drive and fight at an early age, but the family was always 
+            there to care for you. Food was actually fresh and abundant. Mostly home schooled.
+          ganger_family: >-
+            A savage, violent home in any place the gang could take over. You were usually 
+            hungry, cold, and scared. You probably didn't know who your actual parents were. 
+            Education? The Gang taught you how to fight, kill, and steal — what else did you 
+            need to know?
+          combat_zoners: >-
+            A step up from a gang "family," your home was a decaying building somewhere in 
+            the “Zone”, heavily fortified. You were hungry at times, but regularly could score 
+            a bed and a meal. Home schooled.
+          urban_homeless: >-
+            You lived in cars, dumpsters, or abandoned shipping modules. If you were lucky. 
+            You were usually hungry, cold, and scared, unless you were tough enough to fight 
+            for the scraps. Education? School of Hard Knocks.
+          megastructure_warren_rats: >-
+            You grew up in one of the huge new megastructures that went up after the War. 
+            A tiny conapt, kibble and scop for food, a mostly warm bed. Some better educated 
+            adult warren dwellers or a local Corporation may have set up a school.
+          reclaimers: >-
+            You started out on the road, but then moved into one of the deserted ghost towns 
+            or cities to rebuild it. A pioneer life: dangerous, but with plenty of simple 
+            food and a safe place to sleep. You were home schooled if there was anyone who had 
+            the time.
+          edgerunners: >-
+            Your home was always changing based on your parents' current “job”. Could be a 
+            luxury apartment, an urban conapt, or a dumpster if you were on the run. Food and 
+            shelter ran the gamut from gourmet to kibble.
 
     form:
       setup: "Setup"
@@ -304,46 +359,3 @@ en:
         leisurewear: "(Comfort, Agility, Athleticism)"
         bohemian: "(Folksy, Retro, Free-spirited)"
         asia_pop: "(Bright, Costume-like, Youthful)"
-      original_backgrounds_descriptions:
-        corporate_execs: >-
-          Wealthy, powerful, with servants, luxury homes, and the best of everything.
-          Private security made sure you were always safe. 
-          You definitely went to a big-name private school.
-        corporate_managers: >-
-          Well to do, with large homes, safe neighborhoods, nice cars, etc. Sometimes your 
-          parent(s) would hire servants, although this was rare. You had a mix of private 
-          and corporate education.
-        corporate_technicians: >-
-          Middle-middle class, with comfortable conapts or Beaverville suburban homes,
-          minivans and corporate-run technical schools. Kind of like living 1950s America 
-          crossed with 1984.
-        nomad_pack: >-
-          You had a mix of rugged trailers, vehicles, and huge road kombis for your home.
-          You learned to drive and fight at an early age, but the family was always 
-          there to care for you. Food was actually fresh and abundant. Mostly home schooled.
-        ganger_family: >-
-          A savage, violent home in any place the gang could take over. You were usually 
-          hungry, cold, and scared. You probably didn't know who your actual parents were. 
-          Education? The Gang taught you how to fight, kill, and steal—what else did you 
-          need to know?
-        combat_zoners: >-
-          A step up from a gang "family," your home was a decaying building somewhere in 
-          the “Zone”, heavily fortified. You were hungry at times, but regularly could score 
-          a bed and a meal. Home schooled.
-        urban_homeless: >-
-          You lived in cars, dumpsters, or abandoned shipping modules. If you were lucky. 
-          You were usually hungry, cold, and scared, unless you were tough enough to fight 
-          for the scraps. Education? School of Hard Knocks.
-        megastructure_warren_rats: >-
-          You grew up in one of the huge new megastructures that went up after the War. 
-          A tiny conapt, kibble and scop for food, a mostly warm bed. Some better educated 
-          adult warren dwellers or a local Corporation may have set up a school.
-        reclaimers: >-
-          You started out on the road, but then moved into one of the deserted ghost towns 
-          or cities to rebuild it. A pioneer life: dangerous, but with plenty of simple 
-          food and a safe place to sleep. You were home schooled if there was anyone who had 
-          the time.
-        edgerunners: >-
-          Your home was always changing based on your parents' current “job”. Could be a 
-          luxury apartment, an urban conapt, or a dumpster if you were on the run. Food and 
-          shelter ran the gamut from gourmet to kibble.
